# fix-and-build-qtconnectivity-v6.8.1

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  build.yml
